--- a/second-lesson/app/src/main/res/layout/custom_view_example.xml
+++ b/second-lesson/app/src/main/res/layout/custom_view_example.xml
@@ -10,19 +10,11 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
+        app:count="10"
+        app:textColor="@color/white"
         app:layout_constraintTop_toBottomOf="@id/count_button"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/coordinates_text"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_margin="8dp"
-        android:textSize="16sp"
-        app:layout_constraintBottom_toTopOf="@id/counter_view"
-        app:layout_constraintStart_toStartOf="parent"
-        tools:text="16 17"/>
 
     <Button
         android:id="@+id/count_button"
