--- a/second-lesson/app/src/main/res/layout/frame_layout_example.xml
+++ b/second-lesson/app/src/main/res/layout/frame_layout_example.xml
@@ -12,7 +12,7 @@
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="end|center"
+        android:layout_gravity="end"
         android:text="Пример текста"
         android:background="#AAFFFFFF"
         android:padding="8dp"/>
