--- a/second-lesson/app/src/main/res/layout/layout_barrier_example.xml
+++ b/second-lesson/app/src/main/res/layout/layout_barrier_example.xml
@@ -9,7 +9,7 @@
         android:id="@+id/textView1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Очень fdkdk  dkfk  dk k"
+        android:text="Очень fkldl kd kd ldk dlk dl "
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginTop="16dp"/>
 
